# Hotel_Management

./: README.md  hotel_mng.odt
QLKS/: CMakeLists.txt  dulieu.backup  hotel.c  hotel.glade  hotel.glade~  qlksdatabase.sql  query
QLKS/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  hotel  hotel.glade~  rules.ninja
